# toast-logger-win

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-publish.yml
examples/: auto_flush.rs  echo.rs  expire.rs  multi.rs  winapp.rs
hooks/: precommit.sh
src/: error.rs  lib.rs  notification.rs  toast_logger.rs  toast_win.rs  win.rs
src/win/: mod.rs
