[package]
name = "toast-logger-win"
version = "0.5.0"
edition = "2024"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "Rust's `log` crate logger that sends logging output to the Windows Toast Notifications."
keywords = ["log", "windows", "notifications", "toast"]
repository = "https://github.com/kojiishi/toast-logger-win"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "hooks", ".vscode"]

[dependencies]
anyhow = "1.0.98"
log = { version = "0.4.27", features = ["std"] }
thiserror = "2.0.12"
winrt-toast = { version = "0.1.1", optional = true }

[dependencies.windows]
version = "0.61.2"
optional = true
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Globalization",
    "UI_Notifications",
]

[features]
default = ["dep:windows"]
# default = ["winrt-toast"]
winrt-toast = ["dep:winrt-toast"]

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
default-target = "x86_64-pc-windows-msvc"
all-features = true
